# rust-internal-file-server

./: .gitignore  Cargo.toml
.claude/epics/rust-internal-file-server/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/prds/: rust-internal-file-server.md
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/download/: handler.rs  mod.rs
src/storage/: file_manager.rs  metadata.rs  mod.rs
src/upload/: handler.rs  mod.rs
src/video/: mod.rs  processor.rs
src/web/: mod.rs  static_files.rs
